hphp/hack/test/typecheck/idx3_2.php.like_types.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_2.php", line 7, characters 15-20:
Expected string
File "idx.hhi", line 31, characters 10-12:
But got dynamic because it is an unenforceable type
